--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^16.11.51",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "antd": "^4.22.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-places-autocomplete": "^3.4.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
