--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -2,6 +2,10 @@ name: Build and Deploy
 on: [push]
 permissions:
   contents: write
+
+env:
+  PUBLIC_URL: /aaron-climate-counter/
+
 jobs:
   build-and-deploy:
     concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
