--- a/.github/workflows/on-master.yaml
+++ b/.github/workflows/on-master.yaml
@@ -18,9 +18,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
-        run: |
-          npm ci
-          npm run build
+        uses: borales/actions-yarn@v3.0.0
+        with:
+          cmd: install # will run `yarn install` command
+      - uses: borales/actions-yarn@v3.0.0
+        with:
+          cmd: build # will run `yarn build` command
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
